﻿
BrawlCrate - v0.13
Copyright © 2018 soopercool101, MarioDox
BrawlBox  © 2009 - 2018 Bryan Moulton, BlackJax96, libertyernie & Sammi Husky

https://github.com/soopercool101/BrawlCrate
https://discord.gg/s7c8763

This program is provided as-is without any warranty, implied or otherwise.
By using this program, the end user agrees to take full responsibility
regarding its proper and lawful use. The authors/hosts/distributors cannot be 
held responsible for any damage resulting in the use of this program, nor can 
they be held accountable for the manner in which it is used.

 ===============================================
|************ BrawlCrate Change Log ************|
 ===============================================
 
 - BrawlCrate v0.13 - (10/18/2018)
 . Added "Custom Metal Generator", which allows usage of a custom texture
 . Added Module Annotation System
   - Modules can now be labelled in-editor and saved to or loaded from txt files
   - Includes default annotations for STGDONKEY Section[1] and [4], STGDXPSTADIUM Section[4], and STGTARGET Section [4]
 . Added default STDT documentation for the following vBrawl stages:
   - STGCRAYON
   - STGDOLPIC
   - STGDONKEY
   - STGDXGARDEN
   - STGDXGREENS
   - STGDXONETT
   - STGFAMICOM
   - STGGREENHILL
   - STGHALBERD
   - STGHOMERUN
   - STGMANSION
   - STGMARIOPAST
   - STGMETALGEAR
   - STGNORFAIR
   - STGPALUTENA
   - STGPICTCHAT
   - STGPLANKTON
   - STGSTADIUM
   - STGTENGAN
   - STGVILLAGE
 . Added JOJI Soundbank Expansion Calculator in-editor for RSAR files
 . Saving Stage Table txt files now goes in /InternalDocumentation/ folder before being placed in their respective subfolders
 . Stage Tables can now be parsed as Colors or in pure hexadecimal
 . Stage Table values that are floats now display buttons to set as +/-Infinity without having to copy/paste
 . Improved Stage Table auto-detection
 . Improved Stage Table description format to allow for multi-line descriptions