@@ -38,4 +38,4 @@ Super Smash Bros. Brawl © 2008 Nintendo and HAL Laboratory")]
 // by using the '*' as shown below:
 // [assembly: AssemblyVersion("1.0.*")]
 [assembly: AssemblyVersion("0.13.*")]
-[assembly: AssemblyFileVersion("0.13.0.0")]
+[assembly: AssemblyFileVersion("0.13.1.0")]
